@@ -1,3 +1,5 @@
+29.mar (la)
+      - fix shortcuts sorting in preferences
 28.mar (ws)
       - fix #5104: Transpose chordnames hang
       - cleanup of transpose implementation; more testing is needed;
